--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 teachers: [
                     {
                         "name": "Fabio Levy Siqueira",
-                        "linkedin: ": "https://www.linkedin.com/in/levysiqueira/",
+                        "linkedin": "https://www.linkedin.com/in/levysiqueira/",
                         "lattes": "http://lattes.cnpq.br/7009094413011494",
                         "image": "http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4735512J0",
                         "discipline": "Engenharia de Software"
