--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
             <div v-for="teacher of teachers">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <img style="width: 100px;" v-bind:src="teacher.image" v-bind:alt="teacher.name" class="img-rounded">
+                        <div class="row text-center">
+                            <div class="col-md-12">
+                                <div class="text-center">
+                                    <img style="width: 100px;" v-bind:src="teacher.image" v-bind:alt="teacher.name" class="img-rounded">
+                                </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-sm-10">
+                                <div class="col-sm-12">
                                     <p class="form-control-static">{{teacher.name}}</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-sm-10">
+                                <div class="col-sm-12">
                                     <a v-bind:href="teacher.lattes" v-bind:title="teacher.lattes"><i class="fa fa-graduation-cap"></i></a>
                                     <label>&nbsp;</label>
                                     <a v-bind:href="teacher.linkedin" v-bind:title="teacher.linkedin"><i class="fa fa-linkedin"></i></a>
